--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+    
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,7 +12,10 @@
 
 <body>
     <header>
-        <img src="EponaX_logo.png" alt="EponaX Logo" class="logo">
+        <div class="logo-container">
+            <img src="EponaX_logo.png" alt="EponaX Logo" class="logo">
+            <h1 class="site-title">EponaX</h1>
+        </div>
         <nav class="navbar">
             <ul>
                 <li><a href="#home">Home</a></li>
@@ -37,8 +40,11 @@
     <main>
         <section id="home" class="home-section">
             <h1>Building Resilience Through Diversity</h1>
-            <p>At EponaX, we believe in the power of nature to heal itself, and our mission is to support that process by "letting nature lead." With integrity, community, reliability, and resilience at the heart of everything we do, we're here to guide ecological recovery through scientifically-backed strategies.</p>
-            <p>We specialize in using ecosystem engineers like the Exmoor pony—a breed we've dedicated decades to preserving—not just to protect their genetic legacy, but to harness their unique grazing patterns to promote biodiversity. Our goal is simple: to help you achieve a thriving, resilient ecosystem by working with nature, not against it. Whether it's rewilding your land, providing Exmoor ponies for your project, or offering ongoing genetic and ecological monitoring, we're here to make sure your vision for the future is sustainable and vibrant.</p>
+            <p>At EponaX, we value the resilience of nature that arises from its diversity, and our mission is to support the re-establishment of resilient ecosystems by letting nature lead. 
+                With integrity, community, reliability, and resilience at the heart of everything we do, we're here to guide ecological recovery through scientifically-backed strategies.</p>
+            <p>We specialize in using ecosystem engineers like the Exmoor pony—a breed we've dedicated decades to preserving—not just to protect their genetic legacy, but to harness their unique grazing patterns to promote biodiversity. 
+                Our goal is simple: to help you achieve a thriving, resilient ecosystem by working with nature, not against it. Whether it's rewilding your land, providing Exmoor ponies for your project, 
+                or offering ongoing genetic and ecological monitoring, we're here to make sure your vision for the future is sustainable and vibrant.</p>
             
             <h2>Our Services</h2>
             <ul>
@@ -48,25 +54,30 @@
             </ul>
         </section>
 
+
         <section id="about" class="about-section">
             <h2>About Us</h2>
             <div class="team">
                 <div class="member">
+                    <img src="Debbie.jpeg" alt="Debbie Davy" class="profile-pic">
                     <h3>Debbie Davy</h3>
                     <p>Coming soon...</p>
                 </div>
                 <div class="member">
+                    <img src="Richard.JPG" alt="Richard Davy" class="profile-pic">
                     <h3>Richard Davy</h3>
                     <p>Coming soon...</p>
                 </div>
                 <div class="member">
+                    <img src="Philip.jpg" alt="Philip Davy" class="profile-pic">
                     <h3>Philip Davy</h3>
                     <p>Coming soon...</p>
                 </div>
             </div>
 
-            <h2>Achmore Farm</h2>
-            <p>Achmore Farm is home to our herd of Exmoor ponies, who serve as ecosystem engineers. Through their natural grazing patterns, they help improve biodiversity and promote the health of the land. Our work at Achmore is a living example of our commitment to ecological recovery and genetic conservation.</p>
+            <h2>Achmore</h2>
+            <img src="Achmore1.jpg" alt="Achmore Farm" class="achmore-img">
+            <p>Achmore is home to our herd of Exmoor ponies, who serve as ecosystem engineers. Through their natural grazing patterns, they help improve biodiversity and promote the health of the land. Our work at Achmore is a living example of our commitment to ecological recovery and genetic conservation.</p>
         </section>
 
         <section id="research" class="research-section">
@@ -85,9 +96,7 @@
 
         <section id="contact" class="contact-section">
             <h2>Contact Us</h2>
-            <p>Email: <a href="mailto:info@eponax.com">info@eponax.com</a></p>
-            <p>Phone: +123-456-7890</p>
-            <p>Address: Achmore Farm, Scotland, UK</p>
+            <p>Email: <a href="mailto:debbie.exmoors@yahoo.com">debbie.exmoors@yahoo.com</a></p>
         </section>
     </main>
 
