--- a/index.html
+++ b/index.html
@@ -40,10 +40,9 @@
     <main>
         <section id="home" class="home-section">
             <h1>Building Resilience Through Diversity</h1>
-            <p>At EponaX, we value the resilience of nature that arises from its diversity, and our mission is to support the re-establishment of resilient ecosystems by letting nature lead. 
-                With integrity, community, reliability, and resilience at the heart of everything we do, we're here to guide ecological recovery through scientifically-backed strategies.</p>
-            <p>We specialize in using ecosystem engineers like the Exmoor pony—a breed we've dedicated decades to preserving—not just to protect their genetic legacy, but to harness their unique grazing patterns to promote biodiversity. 
-                Our goal is simple: to help you achieve a thriving, resilient ecosystem by working with nature, not against it. Whether it's rewilding your land, providing Exmoor ponies for your project, 
+            <p>At EponaX, we value the resilience of nature that arises from its diversity, and our mission is to support the re-establishment of resilient ecosystems by letting nature lead through scientifically-backed strategies.</p>
+            <p>We specialize in using ecosystem engineers like the Exmoor pony—a rare breed native to Europe that we've dedicated decades to preserving—not just to protect their genetic legacy, but to harness their unique grazing patterns to promote biodiversity. 
+                Our goal is simple: to help you achieve a thriving, resilient ecosystem by working with nature. Whether it's rewilding your land, providing Exmoor ponies for your project, 
                 or offering ongoing genetic and ecological monitoring, we're here to make sure your vision for the future is sustainable and vibrant.</p>
             
             <h2>Our Services</h2>
