--- a/index.html
+++ b/index.html
@@ -95,7 +95,9 @@
 
         <section id="contact" class="contact-section">
             <h2>Contact Us</h2>
-            <p>Email: <a href="mailto:debbie.exmoors@yahoo.com">debbie.exmoors@yahoo.com</a></p>
+            <p>Email: <a href="mailto:debbie.exmoors@yahoo.com">Debbie Davy</a></p>
+            <p>Email: <a href="mailto:pmcdavy@gmail.com">Philip Davy</a></p>
+            <p>Email: <a href="mailto:richard_a_j_davy@yahoo.com">Richard Davy/a></p>
         </section>
     </main>
 
