--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <h2>Contact Us</h2>
             <p>Email: <a href="mailto:debbie.exmoors@yahoo.com">Debbie Davy</a></p>
             <p>Email: <a href="mailto:pmcdavy@gmail.com">Philip Davy</a></p>
-            <p>Email: <a href="mailto:richard_a_j_davy@yahoo.com">Richard Davy/a></p>
+            <p>Email: <a href="mailto:richard_a_j_davy@yahoo.com">Richard Davy</p>
         </section>
     </main>
 
